--- a/index.html
+++ b/index.html
@@ -3,17 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="temas.css">
 </head>
 <body>
-    <center>
-<p>  
-    valeria de los angeles andarcia alvizu
-</p> 
-julieta tobón montoya
-
-<center>
-
+    <div  class="contenedor">
+        Julieta Tobón Montoya 
+        Valeria de los Angeles Andarcia alvizu 
+    </div>
 </body>
 </html>
